parent child margin collapsing fix

--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@
     width: 90%;
     margin: auto;
     margin-bottom: 40px;
+    justify-content: center;
 }  
 
 .destination{
@@ -84,4 +85,9 @@
     text-transform: uppercase;
     font-size: 40px;
     color: rgb(59, 65, 64);
+    margin: 24px 0;
+}  
+
+#highlights{
+    padding: 24px;
 }
